--- a/BuroBuch/booking/templates/booking/home.html
+++ b/BuroBuch/booking/templates/booking/home.html
@@ -1,22 +1,20 @@
 {% extends "booking/base.html" %}
 {% block content %}
-  <div>
-    <a class="btn btn-info btn-sm mt-1 mb-1" href="{% url 'booking-create' %}">Book a desk</a>
-  </div>
+  <h4>All bookings</h4>
   {% for bpd in bookings_per_date %}
     <article class="media content-section">
       <div class="media-body">
-        <div class="article-metadata">
-          <h3 class="mr-2">{{ bpd.0.date|date:"F d, Y" }}</h3>
-          {% for booking in bpd %}
-            <small class="text-muted">Desk: </small> <a class="mr-2" href="{% url 'booking-detail' booking.id %}">{{ booking.desk.name }}</a>
-            <small class="text-muted">Room: </small> {{ booking.desk.room.name }}
-            <small class="text-muted">Department: </small> {{ booking.desk.room.department.name }}
-            <small class="text-muted">Building: </small> {{ booking.desk.room.department.building.name }}
-            <small class="text-muted">booked for </small> {{ booking.user }}
-            <br>
-          {% endfor %}
-        </div>
+        <h4 class="mr-2">{{ bpd.booked.0.date|date:"F d, Y" }}</h4>
+        {{ bpd.available }} desks available.
+        <br>
+        {% for booking in bpd.booked %}
+          <small class="text-muted">Desk: </small> <a class="mr-2" href="{% url 'booking-detail' booking.id %}">{{ booking.desk.name }}</a>
+          <small class="text-muted">Room: </small> {{ booking.desk.room.name }}
+          <small class="text-muted">Department: </small> {{ booking.desk.room.department.name }}
+          <small class="text-muted">Building: </small> {{ booking.desk.room.department.building.name }}
+          <small class="text-muted">booked for </small> {{ booking.user }}
+          <br>
+        {% endfor %}
       </div>
     </article>
   {% endfor %}
@@ -41,13 +39,16 @@
   {% endif %}
 {% endblock content %}
 {% block sidebar %}
-  <h4>My Bookings</h4>
-    <div class="article-metadata">
-      {% for booking in my_bookings %}
-        {{ booking.date|date:"F d, Y" }} <a class="mr-2" href="{% url 'booking-detail' booking.id %}">{{ booking.desk.name }}</a>          
-        <br>
-        <small class="text-muted">{{ booking.desk.room.name }} - {{ booking.desk.room.department.name }} - {{ booking.desk.room.department.building.name }}</small>
-        <hr>
-      {% endfor %}
-    </div>
+  {% if user.is_authenticated %}
+  <a class="btn btn-info btn-sm mt-1 mb-1" href="{% url 'booking-create' %}">Book a desk</a>
+  <div class="content-section">
+    <h4>My Bookings</h4>
+    {% for booking in my_bookings %}
+      {{ booking.date|date:"F d, Y" }} <a class="mr-2" href="{% url 'booking-detail' booking.id %}">{{ booking.desk.name }}</a>          
+      <br>
+      <small class="text-muted">{{ booking.desk.room.name }} - {{ booking.desk.room.department.name }} - {{ booking.desk.room.department.building.name }}</small>
+      <hr>
+    {% endfor %}
+  </div>
+  {% endif %}
 {% endblock sidebar %}
