--- a/BuroBuch/booking/templates/booking/booking_form.html
+++ b/BuroBuch/booking/templates/booking/booking_form.html
@@ -14,7 +14,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Book</button>
+            <button class="btn btn-info" type="submit">Book</button>
         </div>
     </form>
 </div>
